# team-ai

./: README.md  jest.config.cjs  todo.md
securecollab/: .gitignore  DEPLOYMENT_GUIDE.md  ENHANCED_FEATURES.md  PROJECT_STATUS.md  README.md  demo_script.py  dfx.json  doc.md  encrypted_computation_demo.py  encryption_demo  extra.md  netodo.md  package-lock.json  run_backend_tests.sh  run_frontend_tests.sh  run_tests.sh  sample_data.csv  sample_healthcare_data.csv  test_encrypted_workflow.py
securecollab/src/: encryption_demo.rs
securecollab/src/backend/: Cargo.toml
securecollab/src/backend/src/: agent_registry.rs  agent_registry_test.rs  identity_manager.rs  lib.rs  lib_backup.rs  mpc_engine.rs  mpc_engine_test.rs  privacy_proofs.rs  privacy_proofs_test.rs  secure_llm.rs  vetkey_manager.rs  vetkey_manager_test.rs
securecollab/src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js  index.ts
securecollab/src/frontend/: jest.config.js  package.json  tsconfig.json
securecollab/src/frontend/src/: App.tsx  setupTests.js  vite-env.d.ts
securecollab/src/frontend/src/components/: AgentMarketplace.tsx  Button.tsx  DemoScenarios.tsx  EnterpriseDashboard.tsx  LlmChat.tsx  Loader.tsx  LoginPage.tsx  MultiPartyDashboard.tsx  MultiPartyLogin.tsx  MultiPartySignature.tsx  PartyStatus.tsx  PrivacyDashboard.tsx  ThreePartyDashboard.tsx  UserProfile.tsx  index.ts
securecollab/src/frontend/src/services/: authService.ts  backendService.ts  openaiService.ts
securecollab/src/frontend/src/utils/: csvParser.ts
(+9 files in other folders)
