[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
ic-cdk-timers = "0.11"
serde_bytes = "0.11"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
